--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,7 +17,7 @@ fetch-semantic-version:
     - /^(([0-9]+)\.)?([0-9]+)\.x/ # This matches maintenance branches
     - /^([0-9]+)\.([0-9]+)\.([0-9]+)(?:-([0-9A-Za-z-]+(?:\.[0-9A-Za-z-]+)*))?(?:\+[0-9A-Za-z-]+)?$/ # This matches pre-releases
   script:
-    - npm install @semantic-release/gitlab @semantic-release/exec
+    - npm install @semantic-release/gitlab @semantic-release/exec @semantic-release/changelog @semantic-release/git -D
     - npx semantic-release --generate-notes false --dry-run
   artifacts:
     paths:
