--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -46,7 +46,7 @@ erc:
   image: productize/kicad-automation-scripts
   script:
       - mkdir test-erc-build
-      - python -m kicad-automation.eeschema.schematic run_erc ./*.sch ./test-erc-build       
+      - python -m kicad-automation.eeschema.schematic run_erc *.sch test-erc-build       
   tags:
     - docker
 
@@ -54,8 +54,8 @@ drc:
   stage: testing
   image: productize/kicad-automation-scripts
   script:
-      - mkdir test.drc-build
-      - python -m kicad-automation.pcbnew_automation.run_drc ./*.kicad_pcb ./test-drc-build       
+      - mkdir test-drc-build
+      - python -m kicad-automation.pcbnew_automation.run_drc *.kicad_pcb test-drc-build       
   tags:
     - docker
 
@@ -65,8 +65,8 @@ build:
   image: productize/kicad-automation-scripts
   script:
       - mkdir build
-      - python -m kicad-automation.pcbnew_automation.plot ./*.kicad_pcb ./build
-      - python -m kicad-automation.pcbnew_automation.plot -f pdf ./*.kicad_pcb ./build
+      - python -m kicad-automation.pcbnew_automation.plot *.kicad_pcb build
+      - python -m kicad-automation.pcbnew_automation.plot -f pdf *.kicad_pcb build
       - ls build/
       
   artifacts:
