--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,29 +41,29 @@ generate-non-semantic-version:
   tags:
     - docker
 
-erc:
-  stage: testing
-  image: productize/kicad-automation-scripts
-  script:
-      - mkdir test-erc-build
-      - python -m kicad-automation.eeschema.schematic run_erc ./*.sch ./test-erc-build       
-  artifacts:
-      paths:
-          - test-erc-build
-  tags:
-    - docker
+# erc:
+#   stage: testing
+#   image: productize/kicad-automation-scripts
+#   script:
+#       - mkdir test-erc-build
+#       - python -m kicad-automation.eeschema.schematic run_erc ./*.sch ./test-erc-build       
+#   artifacts:
+#       paths:
+#           - test-erc-build
+#   tags:
+#     - docker
 
-drc:
-  stage: testing
-  image: productize/kicad-automation-scripts
-  script:
-      - mkdir test-drc-build
-      - python -m kicad-automation.pcbnew_automation.run_drc ./*.kicad_pcb ./test-drc-build       
-  artifacts:
-      paths:
-          - test-drc-build
-  tags:
-    - docker
+# drc:
+#   stage: testing
+#   image: productize/kicad-automation-scripts
+#   script:
+#       - mkdir test-drc-build
+#       - python -m kicad-automation.pcbnew_automation.run_drc ./*.kicad_pcb ./test-drc-build       
+#   artifacts:
+#       paths:
+#           - test-drc-build
+#   tags:
+#     - docker
 
 
 build:
