--- a/.kibot.yaml
+++ b/.kibot.yaml
@@ -7,7 +7,7 @@ outputs:
   - name: JLCPCB_gerbers
     comment: Gerbers compatible with JLCPCB
     type: gerber
-    dir: Fabrication/JLCPCB
+    dir: JLCPCB
     options: &gerber_options
       exclude_edge_layer: true
       exclude_pads_from_silkscreen: true
@@ -40,7 +40,7 @@ outputs:
   - name: JLCPCB_drill
     comment: Drill files compatible with JLCPCB
     type: excellon
-    dir: Fabrication/JLCPCB
+    dir: JLCPCB
     options:
       pth_and_npth_single_file: false
       pth_id: '-PTH'
