--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,63 +40,63 @@ stages:
 #   tags:
 #     - docker
 
-erc:
-  image: setsoft/kicad_auto:latest
-  stage: testing
-  script:
-    - "[ -f *.sch ] && kibot -c .kibot.yaml -d Fabrication -s update_xml,run_drc -i"
-    - ls -la
-  rules:
-    - changes:
-      - "**.sch"
-      - ".gitlab-ci.yml"
-      when: always
-  artifacts:
-    when: always
-    paths:
-      - Fabrication/
-  tags:
-    - docker
+# erc:
+#   image: setsoft/kicad_auto:latest
+#   stage: testing
+#   script:
+#     - "[ -f *.sch ] && kibot -c .kibot.yaml -d Fabrication -s update_xml,run_drc -i"
+#     - ls -la
+#   rules:
+#     - changes:
+#       - "**.sch"
+#       - ".gitlab-ci.yml"
+#       when: always
+#   artifacts:
+#     when: always
+#     paths:
+#       - Fabrication/
+#   tags:
+#     - docker
 
-drc:
-  image: setsoft/kicad_auto:latest
-  stage: testing
-  script:
-    - "[ -f *.kicad_pcb ] && kibot -c .kibot.yaml -d Fabrication -s update_xml,run_erc -i"
-  rules:
-    - changes:
-      - "**.kicad_pcb"
-      - ".gitlab-ci.yml"
-      when: always
-  artifacts:
-    when: always
-    paths:
-      - Fabrication/
-  tags:
-    - docker
+# drc:
+#   image: setsoft/kicad_auto:latest
+#   stage: testing
+#   script:
+#     - "[ -f *.kicad_pcb ] && kibot -c .kibot.yaml -d Fabrication -s update_xml,run_erc -i"
+#   rules:
+#     - changes:
+#       - "**.kicad_pcb"
+#       - ".gitlab-ci.yml"
+#       when: always
+#   artifacts:
+#     when: always
+#     paths:
+#       - Fabrication/
+#   tags:
+#     - docker
 
-sch_outputs:
-  image: setsoft/kicad_auto:latest
-  stage: gen_fab
-  script:
-    - "[ -f *.sch ] && kibot -c .kibot.yaml -d Fabrication -s run_drc,run_erc print_sch"
-  rules:
-    - changes:
-      - "**.sch"
-      - ".gitlab-ci.yml"
-      when: on_success
-  artifacts:
-    when: always
-    paths:
-      - Fabrication/
-  tags:
-    - docker
+# sch_outputs:
+#   image: setsoft/kicad_auto:latest
+#   stage: gen_fab
+#   script:
+#     - "[ -f *.sch ] && kibot -c .kibot.yaml -d Fabrication -s run_drc,run_erc print_sch"
+#   rules:
+#     - changes:
+#       - "**.sch"
+#       - ".gitlab-ci.yml"
+#       when: on_success
+#   artifacts:
+#     when: always
+#     paths:
+#       - Fabrication/
+#   tags:
+#     - docker
 
 pcb_outputs:
   image: setsoft/kicad_auto:latest
   stage: gen_fab
   script:
-    - "[ -f *.kicad_pcb ] && kibot -c .kibot.yaml -d Fabrication -s all print_front gerbers"
+    - "[ -f *.kicad_pcb ] && kibot -c .kibot.yaml"
   rules:
     - changes:
       - "**.kicad_pcb"
