--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -94,11 +94,24 @@ stages:
 #   tags:
 #     - docker
 
+tests:
+  image: setsoft/kicad_auto:latest
+  stage: testing
+  script:
+    - "[ -f *.kicad_pcb ] && kibot -c test.kibot.yaml"
+  rules:
+    - changes:
+      - "**.kicad_pcb"
+      - ".gitlab-ci.yml"
+      when: on_success
+  tags:
+    - docker
+
 pcb_outputs:
   image: setsoft/kicad_auto:latest
   stage: gen_fab
   script:
-    - "[ -f *.kicad_pcb ] && kibot -c .kibot.yaml"
+    - "[ -f *.kicad_pcb ] && kibot -c output.kibot.yaml"
   rules:
     - changes:
       - "**.kicad_pcb"
