--- a/test.kibot.yaml
+++ b/test.kibot.yaml
@@ -5,7 +5,7 @@ kibot:
 
 preflight:
   run_erc: true
-  update_xml: true
+  update_xml: false
   run_drc: true
   check_zone_fills: true
   ignore_unconnected: false
