--- a/test.kibot.yaml
+++ b/test.kibot.yaml
@@ -4,7 +4,7 @@ kibot:
   version: 1
 
 preflight:
-  run_erc: true
+  run_erc: false
   update_xml: false
   run_drc: true
   check_zone_fills: true
