--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,11 +45,6 @@ tests:
   stage: testing
   script:
     - "[ -f *.kicad_pcb ] && kibot -c test.kibot.yaml"
-  rules:
-    - changes:
-      - "**.kicad_pcb"
-      - ".gitlab-ci.yml"
-      when: on_success
   tags:
     - docker
 
@@ -58,11 +53,14 @@ pcb_outputs:
   stage: gen_fab
   script:
     - "[ -f *.kicad_pcb ] && kibot -c output.kibot.yaml"
-  rules:
-    - changes:
-      - "**.kicad_pcb"
-      - ".gitlab-ci.yml"
-      when: on_success
+  only:
+    refs:
+    - master
+    - alpha
+    # This matches maintenance branches
+    - /^(([0-9]+)\.)?([0-9]+)\.x/
+    # This matches pre-releases
+    - /^([0-9]+)\.([0-9]+)\.([0-9]+)(?:-([0-9A-Za-z-]+(?:\.[0-9A-Za-z-]+)*))?(?:\+[0-9A-Za-z-]+)?$/ 
   artifacts:
     when: always
     paths:
